added new contact page

--- a/src/input.css
+++ b/src/input.css
@@ -20,7 +20,7 @@ body{
         @apply text-[20px] md:text-[22px] lg:text-[28px] 2xl:text-[30px]
    }
    .font-28{
-        @apply text-lg md:text-xl lg:text-[21px] 2xl:text-[28px]
+        @apply text-lg md:text-xl lg:text-[18px] 2xl:text-[28px]
    }
    .font-24{
         @apply text-sm md:text-[16px] lg:text-[16px] 2xl:text-[24px]
@@ -35,13 +35,31 @@ body{
         @apply text-xs md:text-sm lg:text-[13px] 2xl:text-lg
    }
    .font-16{
-        @apply text-xs lg:text-xs 2xl:text-base
+        @apply text-xs lg:text-[11px] 2xl:text-base
    }
    .font-10{
         @apply text-[8px] lg:text-[9px] 2xl:text-[10px]
    }
    .default-search-input{
      @apply h-[42px] 2xl:h-[60px] font-16 ml-4 2xl:ml-6 text-gray-dark placeholder:text-xs 2xl:placeholder:text-base w-full outline-none focus:ring-0 ring-0 border-none
+   }
+   .default-label{
+     @apply font-18 text-gray-dark mb-2.5 capitalize inline-block
+   }
+   .default-input{
+     @apply h-[42px] 2xl:h-[60px] font-16 px-3 2xl:px-5 border border-gray-medium text-gray-dark placeholder:text-xs 2xl:placeholder:text-base w-full outline-none focus:ring-0 ring-0
+   }
+   .required-style{
+     @apply after:content-['*'] after:ml-0.5 after:text-red-500
+   }
+   .btn{
+    @apply px-4 2xl:px-8 py-[11px] 2xl:py-5 text-white font-semibold font-20
+   }
+   .btn-primary{
+     @apply bg-primary btn
+   }
+   .btn-white{
+     @apply bg-white border border-gray-light text-gray-dark btn
    }
 }
 
@@ -73,6 +91,13 @@ body{
 
 .dropdown-default-position-middle{
      z-index: 1000; 
+}
+.dropdown-default-position-left{
+     position: absolute;
+     inset: 100% 0 auto !important;
+     z-index: 1000; /* Adjust z-index as needed */
+     transform: translate(0,0) !important;
+     margin-top: 6px !important;
 }
 
 .sidebar-box-shadow{
