--- a/src/output.css
+++ b/src/output.css
@@ -560,7 +560,7 @@ video {
 
 @media (min-width: 1024px){
   .font-28{
-    font-size: 21px;
+    font-size: 18px;
   }
 }
 
@@ -669,8 +669,7 @@ video {
 
 @media (min-width: 1024px){
   .font-16{
-    font-size: 0.75rem;
-    line-height: 1rem;
+    font-size: 11px;
   }
 }
 
@@ -688,8 +687,7 @@ video {
 
 @media (min-width: 1024px){
   .default-search-input{
-    font-size: 0.75rem;
-    line-height: 1rem;
+    font-size: 11px;
   }
 }
 
@@ -747,6 +745,219 @@ video {
   }
 }
 
+.default-label{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+@media (min-width: 768px){
+  .default-label{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .default-label{
+    font-size: 13px;
+  }
+}
+
+@media (min-width: 1536px){
+  .default-label{
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+}
+
+.default-label{
+  margin-bottom: 0.625rem;
+  display: inline-block;
+  text-transform: capitalize;
+  --tw-text-opacity: 1;
+  color: rgb(8 32 32 / var(--tw-text-opacity));
+}
+
+.default-input{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+@media (min-width: 1024px){
+  .default-input{
+    font-size: 11px;
+  }
+}
+
+@media (min-width: 1536px){
+  .default-input{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+.default-input{
+  height: 42px;
+  width: 100%;
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(213 224 224 / var(--tw-border-opacity));
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+  --tw-text-opacity: 1;
+  color: rgb(8 32 32 / var(--tw-text-opacity));
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+.default-input::-moz-placeholder{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.default-input::placeholder{
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.default-input:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
+
+@media (min-width: 1536px){
+  .default-input{
+    height: 60px;
+    padding-left: 1.25rem;
+    padding-right: 1.25rem;
+  }
+
+  .default-input::-moz-placeholder{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+
+  .default-input::placeholder{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+.required-style::after{
+  margin-left: 0.125rem;
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+  --tw-content: '*';
+  content: var(--tw-content);
+}
+
+.btn-primary{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+@media (min-width: 768px){
+  .btn-primary{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .btn-primary{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .btn-primary{
+    font-size: 20px;
+  }
+}
+
+.btn-primary{
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1536px){
+  .btn-primary{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+}
+
+.btn-primary{
+  --tw-bg-opacity: 1;
+  background-color: rgb(30 77 87 / var(--tw-bg-opacity));
+}
+
+.btn-white{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
+@media (min-width: 768px){
+  .btn-white{
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .btn-white{
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .btn-white{
+    font-size: 20px;
+  }
+}
+
+.btn-white{
+  padding-left: 1rem;
+  padding-right: 1rem;
+  padding-top: 11px;
+  padding-bottom: 11px;
+  font-weight: 600;
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+@media (min-width: 1536px){
+  .btn-white{
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+  }
+}
+
+.btn-white{
+  border-width: 1px;
+  --tw-border-opacity: 1;
+  border-color: rgb(100 103 109 / var(--tw-border-opacity));
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(8 32 32 / var(--tw-text-opacity));
+}
+
 .fixed{
   position: fixed;
 }
@@ -757,6 +968,10 @@ video {
 
 .relative{
   position: relative;
+}
+
+.bottom-2{
+  bottom: 0.5rem;
 }
 
 .left-0{
@@ -775,12 +990,20 @@ video {
   top: 0px;
 }
 
+.top-2{
+  top: 0.5rem;
+}
+
 .top-\[-15px\]{
   top: -15px;
 }
 
 .top-\[calc\(100px\+24px\)\]{
   top: calc(100px + 24px);
+}
+
+.z-10{
+  z-index: 10;
 }
 
 .z-40{
@@ -806,6 +1029,22 @@ video {
   margin-bottom: 0.75rem;
 }
 
+.mb-0{
+  margin-bottom: 0px;
+}
+
+.mb-2{
+  margin-bottom: 0.5rem;
+}
+
+.mb-4{
+  margin-bottom: 1rem;
+}
+
+.me-2{
+  margin-inline-end: 0.5rem;
+}
+
 .ml-4{
   margin-left: 1rem;
 }
@@ -822,6 +1061,14 @@ video {
   margin-right: 1.75rem;
 }
 
+.ms-2{
+  margin-inline-start: 0.5rem;
+}
+
+.ms-2\.5{
+  margin-inline-start: 0.625rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -832,6 +1079,10 @@ video {
 
 .mt-3{
   margin-top: 0.75rem;
+}
+
+.mt-5{
+  margin-top: 1.25rem;
 }
 
 .mt-6{
@@ -846,12 +1097,20 @@ video {
   display: flex;
 }
 
+.inline-flex{
+  display: inline-flex;
+}
+
 .table{
   display: table;
 }
 
 .table-row{
   display: table-row;
+}
+
+.grid{
+  display: grid;
 }
 
 .hidden{
@@ -893,11 +1152,6 @@ video {
   height: 1.25rem;
 }
 
-.size-7{
-  width: 1.75rem;
-  height: 1.75rem;
-}
-
 .size-8{
   width: 2rem;
   height: 2rem;
@@ -918,9 +1172,26 @@ video {
   height: 30px;
 }
 
+.size-\[34px\]{
+  width: 34px;
+  height: 34px;
+}
+
 .size-\[42px\]{
   width: 42px;
   height: 42px;
+}
+
+.h-2{
+  height: 0.5rem;
+}
+
+.h-2\.5{
+  height: 0.625rem;
+}
+
+.h-4{
+  height: 1rem;
 }
 
 .h-8{
@@ -955,6 +1226,26 @@ video {
   width: 33.333333%;
 }
 
+.w-2{
+  width: 0.5rem;
+}
+
+.w-2\.5{
+  width: 0.625rem;
+}
+
+.w-4{
+  width: 1rem;
+}
+
+.w-52{
+  width: 13rem;
+}
+
+.w-7{
+  width: 1.75rem;
+}
+
 .w-8{
   width: 2rem;
 }
@@ -971,8 +1262,8 @@ video {
   width: 160px;
 }
 
-.w-\[220px\]{
-  width: 220px;
+.w-\[215px\]{
+  width: 215px;
 }
 
 .w-\[60px\]{
@@ -983,8 +1274,16 @@ video {
   width: 8px;
 }
 
+.w-auto{
+  width: auto;
+}
+
 .w-full{
   width: 100%;
+}
+
+.min-w-\[140px\]{
+  min-width: 140px;
 }
 
 .max-w-\[150px\]{
@@ -993,6 +1292,10 @@ video {
 
 .flex-1{
   flex: 1 1 0%;
+}
+
+.flex-shrink-0{
+  flex-shrink: 0;
 }
 
 .shrink-0{
@@ -1030,6 +1333,10 @@ video {
   resize: both;
 }
 
+.grid-cols-1{
+  grid-template-columns: repeat(1, minmax(0, 1fr));
+}
+
 .flex-wrap{
   flex-wrap: wrap;
 }
@@ -1052,6 +1359,20 @@ video {
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-x-5{
+  -moz-column-gap: 1.25rem;
+       column-gap: 1.25rem;
+}
+
+.gap-x-9{
+  -moz-column-gap: 2.25rem;
+       column-gap: 2.25rem;
+}
+
+.gap-y-7{
+  row-gap: 1.75rem;
 }
 
 .space-x-1 > :not([hidden]) ~ :not([hidden]){
@@ -1108,12 +1429,27 @@ video {
   margin-bottom: calc(7px * var(--tw-space-y-reverse));
 }
 
+.divide-y > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-y-reverse: 0;
+  border-top-width: calc(1px * calc(1 - var(--tw-divide-y-reverse)));
+  border-bottom-width: calc(1px * var(--tw-divide-y-reverse));
+}
+
+.divide-gray-100 > :not([hidden]) ~ :not([hidden]){
+  --tw-divide-opacity: 1;
+  border-color: rgb(243 244 246 / var(--tw-divide-opacity));
+}
+
 .overflow-hidden{
   overflow: hidden;
 }
 
 .overflow-y-auto{
   overflow-y: auto;
+}
+
+.overflow-x-scroll{
+  overflow-x: scroll;
 }
 
 .text-ellipsis{
@@ -1130,6 +1466,10 @@ video {
 
 .rounded-full{
   border-radius: 9999px;
+}
+
+.rounded-lg{
+  border-radius: 0.5rem;
 }
 
 .rounded-md{
@@ -1150,6 +1490,14 @@ video {
 
 .border-l{
   border-left-width: 1px;
+}
+
+.border-l-0{
+  border-left-width: 0px;
+}
+
+.border-r-0{
+  border-right-width: 0px;
 }
 
 .border-r-\[2px\]{
@@ -1316,6 +1664,11 @@ video {
   padding-top: 100px;
 }
 
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+
 .font-light{
   font-weight: 300;
 }
@@ -1330,6 +1683,20 @@ video {
 
 .capitalize{
   text-transform: capitalize;
+}
+
+.italic{
+  font-style: italic;
+}
+
+.text-blue2{
+  --tw-text-opacity: 1;
+  color: rgb(45 156 219 / var(--tw-text-opacity));
+}
+
+.text-gray-700{
+  --tw-text-opacity: 1;
+  color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
 .text-gray-dark{
@@ -1356,10 +1723,20 @@ video {
   opacity: 0.7;
 }
 
+.shadow{
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-md{
   --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .delay-300{
@@ -1427,6 +1804,15 @@ body{
   z-index: 1000;
 }
 
+.dropdown-default-position-left{
+  position: absolute;
+  inset: 100% 0 auto !important;
+  z-index: 1000;
+  /* Adjust z-index as needed */
+  transform: translate(0,0) !important;
+  margin-top: 6px !important;
+}
+
 .sidebar-box-shadow{
   box-shadow: 0 0 15px #dfdfdf;
 }
@@ -1451,6 +1837,11 @@ body{
 .hover\:bg-\[\#D5E0E0\]:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(213 224 224 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-gray-100:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-primary:hover{
@@ -1542,6 +1933,12 @@ body{
   }
 }
 
+@media (min-width: 768px){
+  .md\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+}
+
 @media (min-width: 1024px){
   .lg\:left-auto{
     left: auto;
@@ -1582,6 +1979,10 @@ body{
 
   .\32xl\:top-\[calc\(140px\+48px\)\]{
     top: calc(140px + 48px);
+  }
+
+  .\32xl\:mt-6{
+    margin-top: 1.5rem;
   }
 
   .\32xl\:\!size-\[26px\]{
@@ -1652,6 +2053,14 @@ body{
     height: 62px;
   }
 
+  .\32xl\:w-10{
+    width: 2.5rem;
+  }
+
+  .\32xl\:w-6{
+    width: 1.5rem;
+  }
+
   .\32xl\:w-\[11px\]{
     width: 11px;
   }
@@ -1674,6 +2083,10 @@ body{
 
   .\32xl\:w-\[76px\]{
     width: 76px;
+  }
+
+  .\32xl\:min-w-\[200px\]{
+    min-width: 200px;
   }
 
   .\32xl\:max-w-\[175px\]{
@@ -1796,6 +2209,28 @@ body{
   .group.collapse-sidebar .\32xl\:group-\[\.collapse-sidebar\]\:px-0{
     padding-left: 0px;
     padding-right: 0px;
+  }
+}
+
+@media (prefers-color-scheme: dark){
+  .dark\:bg-gray-700{
+    --tw-bg-opacity: 1;
+    background-color: rgb(55 65 81 / var(--tw-bg-opacity));
+  }
+
+  .dark\:text-gray-200{
+    --tw-text-opacity: 1;
+    color: rgb(229 231 235 / var(--tw-text-opacity));
+  }
+
+  .dark\:hover\:bg-gray-600:hover{
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+  }
+
+  .dark\:hover\:text-white:hover{
+    --tw-text-opacity: 1;
+    color: rgb(255 255 255 / var(--tw-text-opacity));
   }
 }
 
