--- a/src/output.css
+++ b/src/output.css
@@ -546,6 +546,31 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.font-50{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
+@media (min-width: 768px){
+  .font-50{
+    font-size: 1.875rem;
+    line-height: 2.25rem;
+  }
+}
+
+@media (min-width: 1024px){
+  .font-50{
+    font-size: 2.25rem;
+    line-height: 2.5rem;
+  }
+}
+
+@media (min-width: 1536px){
+  .font-50{
+    font-size: 50px;
+  }
+}
+
 .font-28{
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -778,6 +803,12 @@ video {
   color: rgb(8 32 32 / var(--tw-text-opacity));
 }
 
+@media (min-width: 1536px){
+  .default-label{
+    margin-bottom: 1rem;
+  }
+}
+
 .default-input{
   font-size: 0.75rem;
   line-height: 1rem;
@@ -982,6 +1013,10 @@ video {
   left: 100%;
 }
 
+.right-0{
+  right: 0px;
+}
+
 .right-\[-10px\]{
   right: -10px;
 }
@@ -1014,6 +1049,10 @@ video {
   z-index: 50;
 }
 
+.z-\[99\]{
+  z-index: 99;
+}
+
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
@@ -1027,6 +1066,15 @@ video {
 .my-3{
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
+}
+
+.my-4{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+
+.-mt-2{
+  margin-top: -0.5rem;
 }
 
 .mb-0{
@@ -1043,6 +1091,10 @@ video {
 
 .me-2{
   margin-inline-end: 0.5rem;
+}
+
+.ml-1{
+  margin-left: 0.25rem;
 }
 
 .ml-4{
@@ -1069,6 +1121,10 @@ video {
   margin-inline-start: 0.625rem;
 }
 
+.mt-1{
+  margin-top: 0.25rem;
+}
+
 .mt-2{
   margin-top: 0.5rem;
 }
@@ -1087,6 +1143,10 @@ video {
 
 .mt-6{
   margin-top: 1.5rem;
+}
+
+.mt-8{
+  margin-top: 2rem;
 }
 
 .block{
@@ -1152,9 +1212,29 @@ video {
   height: 1.25rem;
 }
 
+.size-6{
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.size-7{
+  width: 1.75rem;
+  height: 1.75rem;
+}
+
 .size-8{
   width: 2rem;
   height: 2rem;
+}
+
+.size-\[12px\]{
+  width: 12px;
+  height: 12px;
+}
+
+.size-\[15px\]{
+  width: 15px;
+  height: 15px;
 }
 
 .size-\[18px\]{
@@ -1165,6 +1245,11 @@ video {
 .size-\[20px\]{
   width: 20px;
   height: 20px;
+}
+
+.size-\[21px\]{
+  width: 21px;
+  height: 21px;
 }
 
 .size-\[30px\]{
@@ -1214,6 +1299,14 @@ video {
   height: 100vh;
 }
 
+.h-6{
+  height: 1.5rem;
+}
+
+.max-h-full{
+  max-height: 100%;
+}
+
 .min-h-screen{
   min-height: 100vh;
 }
@@ -1250,6 +1343,10 @@ video {
   width: 2rem;
 }
 
+.w-8\/12{
+  width: 66.666667%;
+}
+
 .w-\[130px\]{
   width: 130px;
 }
@@ -1282,12 +1379,24 @@ video {
   width: 100%;
 }
 
+.w-6{
+  width: 1.5rem;
+}
+
 .min-w-\[140px\]{
   min-width: 140px;
 }
 
+.min-w-\[300px\]{
+  min-width: 300px;
+}
+
 .max-w-\[150px\]{
   max-width: 150px;
+}
+
+.max-w-\[400px\]{
+  max-width: 400px;
 }
 
 .flex-1{
@@ -1304,6 +1413,11 @@ video {
 
 .border-separate{
   border-collapse: separate;
+}
+
+.border-spacing-y-0{
+  --tw-border-spacing-y: 0px;
+  border-spacing: var(--tw-border-spacing-x) var(--tw-border-spacing-y);
 }
 
 .border-spacing-y-2{
@@ -1357,8 +1471,16 @@ video {
   justify-content: space-between;
 }
 
+.gap-3{
+  gap: 0.75rem;
+}
+
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-6{
+  gap: 1.5rem;
 }
 
 .gap-x-5{
@@ -1366,9 +1488,22 @@ video {
        column-gap: 1.25rem;
 }
 
+.gap-x-8{
+  -moz-column-gap: 2rem;
+       column-gap: 2rem;
+}
+
 .gap-x-9{
   -moz-column-gap: 2.25rem;
        column-gap: 2.25rem;
+}
+
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
+.gap-y-4{
+  row-gap: 1rem;
 }
 
 .gap-y-7{
@@ -1446,6 +1581,10 @@ video {
 
 .overflow-y-auto{
   overflow-y: auto;
+}
+
+.overflow-x-hidden{
+  overflow-x: hidden;
 }
 
 .overflow-x-scroll{
@@ -1527,6 +1666,10 @@ video {
   border-right-color: rgb(243 244 246 / var(--tw-border-opacity));
 }
 
+.bg-\[\#082020\]\/70{
+  background-color: rgb(8 32 32 / 0.7);
+}
+
 .bg-\[\#F0F0F0\]{
   --tw-bg-opacity: 1;
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
@@ -1567,6 +1710,10 @@ video {
 
 .p-5{
   padding: 1.25rem;
+}
+
+.p-6{
+  padding: 1.5rem;
 }
 
 .px-2{
@@ -1614,6 +1761,11 @@ video {
   padding-bottom: 0.75rem;
 }
 
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
 .py-5{
   padding-top: 1.25rem;
   padding-bottom: 1.25rem;
@@ -1622,6 +1774,11 @@ video {
 .py-\[11px\]{
   padding-top: 11px;
   padding-bottom: 11px;
+}
+
+.py-6{
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
 }
 
 .pb-2{
@@ -1660,13 +1817,16 @@ video {
   padding-right: 22px;
 }
 
+.pt-0{
+  padding-top: 0px;
+}
+
 .pt-\[100px\]{
   padding-top: 100px;
 }
 
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .font-light{
@@ -1694,6 +1854,11 @@ video {
   color: rgb(45 156 219 / var(--tw-text-opacity));
 }
 
+.text-default-green{
+  --tw-text-opacity: 1;
+  color: rgb(39 174 96 / var(--tw-text-opacity));
+}
+
 .text-gray-700{
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1714,9 +1879,19 @@ video {
   color: rgb(30 77 87 / var(--tw-text-opacity));
 }
 
+.text-red1{
+  --tw-text-opacity: 1;
+  color: rgb(235 87 87 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.\!text-red1{
+  --tw-text-opacity: 1 !important;
+  color: rgb(235 87 87 / var(--tw-text-opacity)) !important;
 }
 
 .opacity-70{
@@ -1754,11 +1929,6 @@ body{
 .custom-drop-shadow {
   --tw-drop-shadow: drop-shadow(0 3px 2px rgb(0 0 0 / 0.03)) drop-shadow(0 1px 1px rgb(0 0 0 / 0.04));
   filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
-}
-
-.table-row:has(input:checked){
-  --tw-bg-opacity: 1;
-  background-color: rgb(241 251 245 / var(--tw-bg-opacity));
 }
 
 .table-row:has(input:checked) > *{
@@ -1858,6 +2028,11 @@ body{
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.hover\:text-secondary:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
+}
+
 .group.collapse-sidebar .group-\[\.collapse-sidebar\]\:absolute{
   position: absolute;
 }
@@ -1920,10 +2095,28 @@ body{
   background-color: rgb(39 174 96 / var(--tw-bg-opacity));
 }
 
+.group\/check:has(input:checked) .group-has-\[input\:checked\]\/check\:text-default-green{
+  --tw-text-opacity: 1;
+  color: rgb(39 174 96 / var(--tw-text-opacity));
+}
+
 @media (min-width: 640px){
+  .sm\:my-6{
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
+  }
+
   .sm\:size-\[40px\]{
     width: 40px;
     height: 40px;
+  }
+
+  .sm\:flex-none{
+    flex: none;
+  }
+
+  .sm\:grid-cols-2{
+    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .sm\:space-x-3 > :not([hidden]) ~ :not([hidden]){
@@ -1931,9 +2124,38 @@ body{
     margin-right: calc(0.75rem * var(--tw-space-x-reverse));
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
+
+  .sm\:px-6{
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
+  }
 }
 
 @media (min-width: 768px){
+  .md\:inset-0{
+    inset: 0px;
+  }
+
+  .md\:col-span-2{
+    grid-column: span 2 / span 2;
+  }
+
+  .md\:w-10\/12{
+    width: 83.333333%;
+  }
+
+  .md\:w-5\/12{
+    width: 41.666667%;
+  }
+
+  .md\:w-7\/12{
+    width: 58.333333%;
+  }
+
+  .md\:w-\[160px\]{
+    width: 160px;
+  }
+
   .md\:grid-cols-2{
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -1960,11 +2182,27 @@ body{
   .lg\:w-2\/4{
     width: 50%;
   }
+
+  .lg\:w-4\/12{
+    width: 33.333333%;
+  }
+
+  .lg\:w-8\/12{
+    width: 66.666667%;
+  }
+
+  .lg\:max-w-\[421px\]{
+    max-width: 421px;
+  }
 }
 
 @media (min-width: 1280px){
   .xl\:w-1\/3{
     width: 33.333333%;
+  }
+
+  .xl\:pl-10{
+    padding-left: 2.5rem;
   }
 }
 
@@ -1981,8 +2219,40 @@ body{
     top: calc(140px + 48px);
   }
 
+  .\32xl\:mb-7{
+    margin-bottom: 1.75rem;
+  }
+
+  .\32xl\:mb-8{
+    margin-bottom: 2rem;
+  }
+
+  .\32xl\:mt-0{
+    margin-top: 0px;
+  }
+
+  .\32xl\:mt-10{
+    margin-top: 2.5rem;
+  }
+
+  .\32xl\:mt-4{
+    margin-top: 1rem;
+  }
+
   .\32xl\:mt-6{
     margin-top: 1.5rem;
+  }
+
+  .\32xl\:mt-8{
+    margin-top: 2rem;
+  }
+
+  .\32xl\:mb-6{
+    margin-bottom: 1.5rem;
+  }
+
+  .\32xl\:mt-7{
+    margin-top: 1.75rem;
   }
 
   .\32xl\:\!size-\[26px\]{
@@ -2025,6 +2295,16 @@ body{
     height: 1.75rem;
   }
 
+  .\32xl\:size-\[14px\]{
+    width: 14px;
+    height: 14px;
+  }
+
+  .\32xl\:size-\[20px\]{
+    width: 20px;
+    height: 20px;
+  }
+
   .\32xl\:size-\[26px\]{
     width: 26px;
     height: 26px;
@@ -2045,6 +2325,21 @@ body{
     height: 59px;
   }
 
+  .\32xl\:size-4{
+    width: 1rem;
+    height: 1rem;
+  }
+
+  .\32xl\:size-\[24px\]{
+    width: 24px;
+    height: 24px;
+  }
+
+  .\32xl\:size-\[28px\]{
+    width: 28px;
+    height: 28px;
+  }
+
   .\32xl\:h-\[140px\]{
     height: 140px;
   }
@@ -2059,6 +2354,10 @@ body{
 
   .\32xl\:w-6{
     width: 1.5rem;
+  }
+
+  .\32xl\:w-60{
+    width: 15rem;
   }
 
   .\32xl\:w-\[11px\]{
@@ -2093,8 +2392,16 @@ body{
     max-width: 175px;
   }
 
+  .\32xl\:max-w-\[600px\]{
+    max-width: 600px;
+  }
+
   .\32xl\:gap-6{
     gap: 1.5rem;
+  }
+
+  .\32xl\:gap-y-10{
+    row-gap: 2.5rem;
   }
 
   .\32xl\:space-x-3 > :not([hidden]) ~ :not([hidden]){
@@ -2129,12 +2436,24 @@ body{
     padding: 1rem;
   }
 
+  .\32xl\:p-6{
+    padding: 1.5rem;
+  }
+
   .\32xl\:p-7{
     padding: 1.75rem;
   }
 
+  .\32xl\:p-8{
+    padding: 2rem;
+  }
+
   .\32xl\:p-\[18px\]{
     padding: 18px;
+  }
+
+  .\32xl\:p-10{
+    padding: 2.5rem;
   }
 
   .\32xl\:px-4{
@@ -2155,6 +2474,11 @@ body{
   .\32xl\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .\32xl\:py-2{
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
   }
 
   .\32xl\:py-3{
@@ -2182,6 +2506,16 @@ body{
     padding-bottom: 1.75rem;
   }
 
+  .\32xl\:py-8{
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+  }
+
+  .\32xl\:py-10{
+    padding-top: 2.5rem;
+    padding-bottom: 2.5rem;
+  }
+
   .\32xl\:pb-4{
     padding-bottom: 1rem;
   }
@@ -2200,6 +2534,22 @@ body{
 
   .\32xl\:pt-\[140px\]{
     padding-top: 140px;
+  }
+
+  .\32xl\:pb-8{
+    padding-bottom: 2rem;
+  }
+
+  .\32xl\:pb-6{
+    padding-bottom: 1.5rem;
+  }
+
+  .\32xl\:pt-8{
+    padding-top: 2rem;
+  }
+
+  .\32xl\:pb-5{
+    padding-bottom: 1.25rem;
   }
 
   .group.collapse-sidebar .\32xl\:group-\[\.collapse-sidebar\]\:w-\[116px\]{
@@ -2237,6 +2587,11 @@ body{
 .\[\&\.active\]\:bg-primary.active{
   --tw-bg-opacity: 1;
   background-color: rgb(30 77 87 / var(--tw-bg-opacity));
+}
+
+.\[\&\.active\]\:text-secondary.active{
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
 }
 
 .\[\&\.active\]\:text-white.active{
