--- a/src/output.css
+++ b/src/output.css
@@ -989,6 +989,10 @@ video {
   color: rgb(8 32 32 / var(--tw-text-opacity));
 }
 
+.pointer-events-none{
+  pointer-events: none;
+}
+
 .fixed{
   position: fixed;
 }
@@ -1025,6 +1029,10 @@ video {
   top: 0px;
 }
 
+.top-1\/2{
+  top: 50%;
+}
+
 .top-2{
   top: 0.5rem;
 }
@@ -1053,6 +1061,16 @@ video {
   z-index: 99;
 }
 
+.-mx-2{
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+}
+
+.-mx-2\.5{
+  margin-left: -0.625rem;
+  margin-right: -0.625rem;
+}
+
 .-mx-4{
   margin-left: -1rem;
   margin-right: -1rem;
@@ -1079,6 +1097,10 @@ video {
 
 .mb-0{
   margin-bottom: 0px;
+}
+
+.mb-1{
+  margin-bottom: 0.25rem;
 }
 
 .mb-2{
@@ -1149,6 +1171,10 @@ video {
   margin-top: 2rem;
 }
 
+.mt-auto{
+  margin-top: auto;
+}
+
 .block{
   display: block;
 }
@@ -1180,6 +1206,11 @@ video {
 .\!size-\[16px\]{
   width: 16px !important;
   height: 16px !important;
+}
+
+.\!size-\[25px\]{
+  width: 25px !important;
+  height: 25px !important;
 }
 
 .size-10{
@@ -1252,6 +1283,11 @@ video {
   height: 21px;
 }
 
+.size-\[25px\]{
+  width: 25px;
+  height: 25px;
+}
+
 .size-\[30px\]{
   width: 30px;
   height: 30px;
@@ -1267,6 +1303,11 @@ video {
   height: 42px;
 }
 
+.size-\[70px\]{
+  width: 70px;
+  height: 70px;
+}
+
 .h-2{
   height: 0.5rem;
 }
@@ -1279,12 +1320,20 @@ video {
   height: 1rem;
 }
 
+.h-6{
+  height: 1.5rem;
+}
+
 .h-8{
   height: 2rem;
 }
 
 .h-\[100px\]{
   height: 100px;
+}
+
+.h-\[40px\]{
+  height: 40px;
 }
 
 .h-\[50px\]{
@@ -1297,10 +1346,6 @@ video {
 
 .h-screen{
   height: 100vh;
-}
-
-.h-6{
-  height: 1.5rem;
 }
 
 .max-h-full{
@@ -1327,16 +1372,40 @@ video {
   width: 0.625rem;
 }
 
+.w-3{
+  width: 0.75rem;
+}
+
+.w-3\.5{
+  width: 0.875rem;
+}
+
 .w-4{
   width: 1rem;
+}
+
+.w-4\/12{
+  width: 33.333333%;
+}
+
+.w-5\/12{
+  width: 41.666667%;
 }
 
 .w-52{
   width: 13rem;
 }
 
+.w-6{
+  width: 1.5rem;
+}
+
 .w-7{
   width: 1.75rem;
+}
+
+.w-7\/12{
+  width: 58.333333%;
 }
 
 .w-8{
@@ -1363,8 +1432,20 @@ video {
   width: 215px;
 }
 
+.w-\[28px\]{
+  width: 28px;
+}
+
+.w-\[35px\]{
+  width: 35px;
+}
+
 .w-\[60px\]{
   width: 60px;
+}
+
+.w-\[80px\]{
+  width: 80px;
 }
 
 .w-\[8px\]{
@@ -1379,8 +1460,8 @@ video {
   width: 100%;
 }
 
-.w-6{
-  width: 1.5rem;
+.w-screen{
+  width: 100vw;
 }
 
 .min-w-\[140px\]{
@@ -1430,6 +1511,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-translate-y-1\/2{
+  --tw-translate-y: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .rotate-180{
   --tw-rotate: 180deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1451,6 +1537,10 @@ video {
   grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
+.flex-col{
+  flex-direction: column;
+}
+
 .flex-wrap{
   flex-wrap: wrap;
 }
@@ -1469,6 +1559,10 @@ video {
 
 .justify-between{
   justify-content: space-between;
+}
+
+.gap-10{
+  gap: 2.5rem;
 }
 
 .gap-3{
@@ -1603,6 +1697,10 @@ video {
   border-radius: 1rem;
 }
 
+.rounded-\[5px\]{
+  border-radius: 5px;
+}
+
 .rounded-full{
   border-radius: 9999px;
 }
@@ -1675,6 +1773,11 @@ video {
   background-color: rgb(240 240 240 / var(--tw-bg-opacity));
 }
 
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
 .bg-primary{
   --tw-bg-opacity: 1;
   background-color: rgb(30 77 87 / var(--tw-bg-opacity));
@@ -1683,6 +1786,10 @@ video {
 .bg-secondary{
   --tw-bg-opacity: 1;
   background-color: rgb(255 108 62 / var(--tw-bg-opacity));
+}
+
+.bg-secondary\/10{
+  background-color: rgb(255 108 62 / 0.1);
 }
 
 .bg-white{
@@ -1700,12 +1807,24 @@ video {
      object-position: center;
 }
 
+.p-1{
+  padding: 0.25rem;
+}
+
+.p-1\.5{
+  padding: 0.375rem;
+}
+
 .p-2{
   padding: 0.5rem;
 }
 
 .p-3{
   padding: 0.75rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .p-5{
@@ -1719,6 +1838,11 @@ video {
 .px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
+}
+
+.px-2\.5{
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .px-3{
@@ -1744,6 +1868,11 @@ video {
 .px-\[20px\]{
   padding-left: 20px;
   padding-right: 20px;
+}
+
+.py-12{
+  padding-top: 3rem;
+  padding-bottom: 3rem;
 }
 
 .py-2{
@@ -1774,11 +1903,6 @@ video {
 .py-\[11px\]{
   padding-top: 11px;
   padding-bottom: 11px;
-}
-
-.py-6{
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
 }
 
 .pb-2{
@@ -1821,12 +1945,16 @@ video {
   padding-top: 0px;
 }
 
-.pt-\[100px\]{
-  padding-top: 100px;
-}
-
 .pt-5{
   padding-top: 1.25rem;
+}
+
+.pt-6{
+  padding-top: 1.5rem;
+}
+
+.pt-\[100px\]{
+  padding-top: 100px;
 }
 
 .font-light{
@@ -1841,12 +1969,21 @@ video {
   font-weight: 600;
 }
 
+.font-thin{
+  font-weight: 100;
+}
+
 .capitalize{
   text-transform: capitalize;
 }
 
 .italic{
   font-style: italic;
+}
+
+.\!text-red1{
+  --tw-text-opacity: 1 !important;
+  color: rgb(235 87 87 / var(--tw-text-opacity)) !important;
 }
 
 .text-blue2{
@@ -1884,14 +2021,22 @@ video {
   color: rgb(235 87 87 / var(--tw-text-opacity));
 }
 
+.text-secondary{
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.\!text-red1{
-  --tw-text-opacity: 1 !important;
-  color: rgb(235 87 87 / var(--tw-text-opacity)) !important;
+.opacity-0{
+  opacity: 0;
+}
+
+.opacity-100{
+  opacity: 1;
 }
 
 .opacity-70{
@@ -2009,6 +2154,11 @@ body{
   background-color: rgb(213 224 224 / var(--tw-bg-opacity));
 }
 
+.hover\:bg-\[\#fcfcfc\]:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 252 252 / var(--tw-bg-opacity));
+}
+
 .hover\:bg-gray-100:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
@@ -2023,12 +2173,22 @@ body{
   --tw-bg-opacity: 0.3;
 }
 
+.hover\:text-red1:hover{
+  --tw-text-opacity: 1;
+  color: rgb(235 87 87 / var(--tw-text-opacity));
+}
+
+.hover\:text-secondary:hover{
+  --tw-text-opacity: 1;
+  color: rgb(255 108 62 / var(--tw-text-opacity));
+}
+
 .hover\:text-white:hover{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.hover\:text-secondary:hover{
+.focus\:text-secondary:focus{
   --tw-text-opacity: 1;
   color: rgb(255 108 62 / var(--tw-text-opacity));
 }
@@ -2081,6 +2241,14 @@ body{
   color: rgb(39 174 96 / var(--tw-text-opacity));
 }
 
+.group.active .group-\[\.active\]\:opacity-0{
+  opacity: 0;
+}
+
+.group.active .group-\[\.active\]\:opacity-100{
+  opacity: 1;
+}
+
 .group\/check:has(input:checked) .group-has-\[input\:checked\]\/check\:block{
   display: block;
 }
@@ -2095,6 +2263,11 @@ body{
   background-color: rgb(39 174 96 / var(--tw-bg-opacity));
 }
 
+.group\/main:has(.dropdown.block) .group-has-\[\.dropdown\.block\]\/main\:text-red1{
+  --tw-text-opacity: 1;
+  color: rgb(235 87 87 / var(--tw-text-opacity));
+}
+
 .group\/check:has(input:checked) .group-has-\[input\:checked\]\/check\:text-default-green{
   --tw-text-opacity: 1;
   color: rgb(39 174 96 / var(--tw-text-opacity));
@@ -2104,6 +2277,18 @@ body{
   .sm\:my-6{
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
+  }
+
+  .sm\:block{
+    display: block;
+  }
+
+  .sm\:flex{
+    display: flex;
+  }
+
+  .sm\:hidden{
+    display: none;
   }
 
   .sm\:size-\[40px\]{
@@ -2175,6 +2360,18 @@ body{
     margin-bottom: 0px;
   }
 
+  .lg\:block{
+    display: block;
+  }
+
+  .lg\:flex{
+    display: flex;
+  }
+
+  .lg\:hidden{
+    display: none;
+  }
+
   .lg\:w-1\/4{
     width: 25%;
   }
@@ -2193,6 +2390,11 @@ body{
 
   .lg\:max-w-\[421px\]{
     max-width: 421px;
+  }
+
+  .lg\:px-4{
+    padding-left: 1rem;
+    padding-right: 1rem;
   }
 }
 
@@ -2219,6 +2421,10 @@ body{
     top: calc(140px + 48px);
   }
 
+  .\32xl\:mb-6{
+    margin-bottom: 1.5rem;
+  }
+
   .\32xl\:mb-7{
     margin-bottom: 1.75rem;
   }
@@ -2243,21 +2449,22 @@ body{
     margin-top: 1.5rem;
   }
 
-  .\32xl\:mt-8{
-    margin-top: 2rem;
-  }
-
-  .\32xl\:mb-6{
-    margin-bottom: 1.5rem;
-  }
-
   .\32xl\:mt-7{
     margin-top: 1.75rem;
+  }
+
+  .\32xl\:mt-8{
+    margin-top: 2rem;
   }
 
   .\32xl\:\!size-\[26px\]{
     width: 26px !important;
     height: 26px !important;
+  }
+
+  .\32xl\:\!size-\[34px\]{
+    width: 34px !important;
+    height: 34px !important;
   }
 
   .\32xl\:size-10{
@@ -2295,9 +2502,14 @@ body{
     height: 1.75rem;
   }
 
-  .\32xl\:size-\[14px\]{
-    width: 14px;
-    height: 14px;
+  .\32xl\:size-8{
+    width: 2rem;
+    height: 2rem;
+  }
+
+  .\32xl\:size-\[115px\]{
+    width: 115px;
+    height: 115px;
   }
 
   .\32xl\:size-\[20px\]{
@@ -2315,6 +2527,11 @@ body{
     height: 30px;
   }
 
+  .\32xl\:size-\[35px\]{
+    width: 35px;
+    height: 35px;
+  }
+
   .\32xl\:size-\[50px\]{
     width: 50px;
     height: 50px;
@@ -2323,21 +2540,6 @@ body{
   .\32xl\:size-\[59px\]{
     width: 59px;
     height: 59px;
-  }
-
-  .\32xl\:size-4{
-    width: 1rem;
-    height: 1rem;
-  }
-
-  .\32xl\:size-\[24px\]{
-    width: 24px;
-    height: 24px;
-  }
-
-  .\32xl\:size-\[28px\]{
-    width: 28px;
-    height: 28px;
   }
 
   .\32xl\:h-\[140px\]{
@@ -2352,12 +2554,24 @@ body{
     width: 2.5rem;
   }
 
+  .\32xl\:w-4{
+    width: 1rem;
+  }
+
+  .\32xl\:w-5{
+    width: 1.25rem;
+  }
+
   .\32xl\:w-6{
     width: 1.5rem;
   }
 
   .\32xl\:w-60{
     width: 15rem;
+  }
+
+  .\32xl\:w-\[116px\]{
+    width: 116px;
   }
 
   .\32xl\:w-\[11px\]{
@@ -2378,6 +2592,14 @@ body{
 
   .\32xl\:w-\[315px\]{
     width: 315px;
+  }
+
+  .\32xl\:w-\[38px\]{
+    width: 38px;
+  }
+
+  .\32xl\:w-\[48px\]{
+    width: 48px;
   }
 
   .\32xl\:w-\[76px\]{
@@ -2410,6 +2632,12 @@ body{
     margin-left: calc(0.75rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
+  .\32xl\:space-x-4 > :not([hidden]) ~ :not([hidden]){
+    --tw-space-x-reverse: 0;
+    margin-right: calc(1rem * var(--tw-space-x-reverse));
+    margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+  }
+
   .\32xl\:space-x-5 > :not([hidden]) ~ :not([hidden]){
     --tw-space-x-reverse: 0;
     margin-right: calc(1.25rem * var(--tw-space-x-reverse));
@@ -2426,6 +2654,14 @@ body{
     --tw-space-y-reverse: 0;
     margin-top: calc(0.375rem * calc(1 - var(--tw-space-y-reverse)));
     margin-bottom: calc(0.375rem * var(--tw-space-y-reverse));
+  }
+
+  .\32xl\:p-10{
+    padding: 2.5rem;
+  }
+
+  .\32xl\:p-2{
+    padding: 0.5rem;
   }
 
   .\32xl\:p-3{
@@ -2452,10 +2688,6 @@ body{
     padding: 18px;
   }
 
-  .\32xl\:p-10{
-    padding: 2.5rem;
-  }
-
   .\32xl\:px-4{
     padding-left: 1rem;
     padding-right: 1rem;
@@ -2474,6 +2706,11 @@ body{
   .\32xl\:px-8{
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+
+  .\32xl\:py-14{
+    padding-top: 3.5rem;
+    padding-bottom: 3.5rem;
   }
 
   .\32xl\:py-2{
@@ -2511,13 +2748,12 @@ body{
     padding-bottom: 2rem;
   }
 
-  .\32xl\:py-10{
-    padding-top: 2.5rem;
-    padding-bottom: 2.5rem;
-  }
-
   .\32xl\:pb-4{
     padding-bottom: 1rem;
+  }
+
+  .\32xl\:pb-5{
+    padding-bottom: 1.25rem;
   }
 
   .\32xl\:pl-6{
@@ -2532,24 +2768,12 @@ body{
     padding-right: 2rem;
   }
 
-  .\32xl\:pt-\[140px\]{
-    padding-top: 140px;
-  }
-
-  .\32xl\:pb-8{
-    padding-bottom: 2rem;
-  }
-
-  .\32xl\:pb-6{
-    padding-bottom: 1.5rem;
-  }
-
   .\32xl\:pt-8{
     padding-top: 2rem;
   }
 
-  .\32xl\:pb-5{
-    padding-bottom: 1.25rem;
+  .\32xl\:pt-\[140px\]{
+    padding-top: 140px;
   }
 
   .group.collapse-sidebar .\32xl\:group-\[\.collapse-sidebar\]\:w-\[116px\]{
@@ -2597,6 +2821,10 @@ body{
 .\[\&\.active\]\:text-white.active{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.\[\&\.active\]\:opacity-50.active{
+  opacity: 0.5;
 }
 
 .\[\&\>\*\:first-child\]\:border-l>*:first-child{
